// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API get should dispatch a success toast notification on API resolve 1`] = `
Array [
  Array [
    Object {
      "key": "SOME_KEY",
      "payload": Object {
        "id": 2,
        "url": "some/url",
      },
      "type": "SOME_KEY_REQUEST",
    },
  ],
  Array [
    Object {
      "key": "SOME_KEY",
      "payload": Object {
        "id": 2,
        "url": "some/url",
      },
      "response": Object {
        "results": Array [
          1,
        ],
      },
      "type": "SOME_KEY_SUCCESS",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "key": "SOME_KEY_SUCCESS",
        "toast": Object {
          "key": "SOME_KEY_SUCCESS",
          "message": "Your API request was successful!",
          "type": "success",
        },
      },
      "type": "toasts/addToast",
    },
  ],
]
`;

exports[`API get should dispatch an error toast notification on API failure 1`] = `
Array [
  Array [
    Object {
      "key": "SOME_KEY",
      "payload": Object {
        "id": 2,
        "url": "some/url",
      },
      "type": "SOME_KEY_REQUEST",
    },
  ],
  Array [
    Object {
      "key": "SOME_KEY",
      "payload": Object {
        "id": 2,
        "url": "some/url",
      },
      "response": [Error: bad request],
      "type": "SOME_KEY_FAILURE",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "key": "SOME_KEY_FAILURE",
        "toast": Object {
          "key": "SOME_KEY_FAILURE",
          "message": "Oh no! Something went wrong, server returned the error: bad request",
          "type": "danger",
        },
      },
      "type": "toasts/addToast",
    },
  ],
]
`;

exports[`API get should dispatch an update if an updateData callback exists 1`] = `
Array [
  Array [
    Object {
      "key": "INITIAL_RESOURCE",
      "payload": Object {
        "id": 2,
        "url": "some/url",
      },
      "type": "SOME_KEY_REQUEST",
    },
  ],
  Array [
    Object {
      "key": "INITIAL_RESOURCE",
      "payload": Object {
        "id": 2,
        "url": "some/url",
      },
      "response": Object {
        "results": Array [
          1,
        ],
      },
      "type": "SOME_KEY_SUCCESS",
    },
  ],
  Array [
    Object {
      "key": "INITIAL_RESOURCE",
      "payload": Object {
        "results": Array [
          3,
        ],
      },
      "type": "SOME_KEY_UPDATE",
    },
  ],
]
`;

exports[`API get should dispatch request and failure actions on reject 1`] = `
Array [
  Array [
    [Error: bad request],
    [Function],
  ],
]
`;

exports[`API get should dispatch request and failure actions on reject 2`] = `
Array [
  Array [
    Object {
      "key": "SOME_KEY",
      "payload": Object {
        "id": 2,
        "url": "some/url",
      },
      "type": "SOME_KEY_REQUEST",
    },
  ],
  Array [
    Object {
      "key": "SOME_KEY",
      "payload": Object {
        "id": 2,
        "url": "some/url",
      },
      "response": [Error: bad request],
      "type": "SOME_KEY_FAILURE",
    },
  ],
]
`;

exports[`API get should dispatch request and success actions on resolve 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "results": Array [
          1,
        ],
      },
    },
    [Function],
  ],
]
`;

exports[`API get should dispatch request and success actions on resolve 2`] = `
Array [
  Array [
    Object {
      "key": "SOME_KEY",
      "payload": Object {
        "id": 2,
        "url": "some/url",
      },
      "type": "SOME_KEY_REQUEST",
    },
  ],
  Array [
    Object {
      "key": "SOME_KEY",
      "payload": Object {
        "id": 2,
        "url": "some/url",
      },
      "response": Object {
        "results": Array [
          1,
        ],
      },
      "type": "SOME_KEY_SUCCESS",
    },
  ],
]
`;

exports[`API get should dispatch stop interval on API error 1`] = `
Array [
  Array [
    [Error: bad request],
    [Function],
  ],
]
`;

exports[`API get should dispatch stop interval on API error 2`] = `
Array [
  Array [
    Object {
      "key": "SOME_KEY",
      "payload": Object {
        "id": 2,
        "url": "some/url",
      },
      "type": "SOME_KEY_REQUEST",
    },
  ],
  Array [
    Object {
      "key": "SOME_KEY",
      "payload": Object {
        "id": 2,
        "url": "some/url",
      },
      "response": [Error: bad request],
      "type": "SOME_KEY_FAILURE",
    },
  ],
]
`;
